# NAIBR

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
example/: example.config
scripts/: bedpe_to_vcf.py
src/: distributions.py  estimate_params.py  rank.py
src/naibr/: __init__.py  __main__.py  distributions.py  estimate_params.py  get_reads.py  global_vars.py  rank.py  utils.py
tests/: test_global_vars.py  test_run.py  test_utils.py
tests/data/: HCC1954T_10xGenomics_chr21_INV.bam.bai  HCC1954T_10xGenomics_chr21_INV.candidates_reversed.bedpe  HCC1954T_10xGenomics_chr21_INV.one_barcode.bam  HCC1954T_10xGenomics_chr21_INV.one_barcode.bam.bai  HCC1954T_10xGenomics_chr3_DUP.bam.bai  HCC1954T_10xGenomics_chr_12_20_TRA.bam.bai  NA24385_10xGenomics_chr1_DEL.bam.bai  make_testdata.sh
