[metadata]
name = naibr
version = 0.0.0
description = Identifies novel adjacencies created by structural variations using linked-read data
long_description = file: README.md
url = https://github.com/pontushojer/NAIBR
author = Rebecca Elyanow
license = MIT

[options]
python_requires = >=3.7
packages =
    src
install_requires =
    pysam
    mpmath
    numpy
    scipy
    matplotlib
    future

[options.entry_points]
console_scripts =
    naibr=src.__main__:main
