[metadata]
name = naibr
version = 0.3.0
description = Identifies novel adjacencies created by structural variations using linked-read data
long_description = file: README.md
url = https://github.com/pontushojer/NAIBR
author = Rebecca Elyanow
license = MIT

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:
install_requires =
    pysam
    mpmath
    numpy
    scipy
    matplotlib
    future

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    naibr=naibr.__main__:main

[options.extras_require]
dev =
    pytest